aws/aws-eks-platform/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: names-app
spec:
  type: LoadBalancer
  selector:
    service: backend 
  ports:
    - protocol: TCP 
      port: 80 
      targetPort: 5001
