aws/aws-eks-platform/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels: 
      service: nginx 
  template:
    metadata:
      labels:
        service: nginx
    spec:
      containers:
        - name: nginx 
          image: nginx:alpine 
          volumeMounts: 
            - name: html 
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: nginx-html 
---
apiVersion: v1 
kind: Service 
metadata:
  name: nginx-service 
spec:
  selector: 
    service: nginx
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
